Bug 80574 - Other: Crash on Firebird when executing SQL direct and closing
Summary: Other: Crash on Firebird when executing SQL direct and closing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-26 20:45 UTC by Julien Nabet
Modified: 2014-07-05 06:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt console from master sources (13.22 KB, text/plain)
2014-06-26 20:45 UTC, Julien Nabet
Details
Valgrind log (73.90 KB, text/x-log)
2014-06-26 20:52 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2014-06-26 20:45:01 UTC
Created attachment 101829 [details]
bt console from master sources

Problem description: 
On a Firebird embedded DB, after having executed a request in SQL direct, when closing file, LO crashes

Steps to reproduce:
1. Create a Firebird embedded DB
2. Create a simple table
3. Create a query on SQL view and use "Run SQL Command Directly"
4. Close LO

Current behavior:
Crash

Expected behavior:
No crash
              
Operating System: Debian
Version: 4.4.0.0.alpha0+ Master
Comment 1 Julien Nabet 2014-06-26 20:52:22 UTC
Created attachment 101830 [details]
Valgrind log

Quite weird that OPreparedStatement::close() is present 2 times in the Valgrind stacktrace
Comment 2 Julien Nabet 2014-06-26 20:53:20 UTC
Lionel/Andrzej: I thought you might be interested in this bugtracker (bt + interesting Valgrind trace)

(put it at New since bt)
Comment 3 Commit Notification 2014-06-27 22:19:20 UTC
Norbert Thiebaud committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7453024e1f46a038d1278ddcbba64ccdbf8dcd1

fdo#80574 firebird memory management issues



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2014-06-28 20:57:25 UTC
Norbert: I updated my local repo and so retrieved your commit, it works great!
Are you planning to cherry-pick on 4.2+4.3 or do you prefer to include it later in a pack of fixes for Firebird (given your last commits about it)?